Fix to make the chat bubble text more visible

--- a/public/themes/dark.css
+++ b/public/themes/dark.css
@@ -55,7 +55,7 @@
   --color-success-hover: #10b981;
   --color-success-border: #10b981;
 
-  --color-chat-me-bg: #2F3C2C;
+  --color-chat-me-bg: #b4ffa3;
   --color-chat-me-meta: #FFFFFF;
   --color-chat-me-border: #000000;
   --color-chat-other-bg: #FFFFFF;
